update API switch

--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -24,6 +24,7 @@
                     <th>时间</th>
                     <th>IP</th>
                     <th>所在地</th>
+                    <th>API</th>
                     <th>查询城市</th>
                     <th>天气情况</th>
                     <th>天气图标</th>
@@ -38,6 +39,7 @@
                     <td>{{h['time']}}</td>
                     <td>{{h['ip']}}</td>
                     <td>{{h['location']}}</td>
+                    <td>{{h['api']}}</td>
                     <td>{{h['cityname']}}</td>
                     <td>{{h['weather']}}</td>
                     <td><img src="./static/{{h['weathercode']}}.png" height="30" width="30"></td>
