--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,5 +1,9 @@
-{% extends "bootstrap/base.html" %} <!-- base.html模板继承自bootstrap/base.html -->
+{% extends "bootstrap/base.html" %} 
 {% block title %}天气在线查询{% endblock %}
+{% block favicon %}
+<link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+<link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon">
+{% endblock %}
 {% block navbar %}
 
 {% endblock %}
