--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -17,6 +17,12 @@
 {% endblock %}
 
 {% block page_content %}
+{% for message in get_flashed_messages(with_categories=True) %}
+    <div class="alert alert-{{ message[0] }}">
+        {{ message[1] }}
+    </div>
+{% endfor %}
+{% if history %}
 <table class="table table-striped">
             <thead>
             <tr>
@@ -49,5 +55,5 @@
                 {% endfor %}
             </tbody>
         </table>  
-
+{% endif %}
 {% endblock %}
