--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -22,7 +22,7 @@
         {{ message[1] }}
     </div>
 {% endfor %}
-{% if pagination %}
+{% if history %}
 <table class="table table-striped">
             <thead>
             <tr>
