--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -22,7 +22,7 @@
         {{ message[1] }}
     </div>
 {% endfor %}
-{% if history %}
+{% if history_not_empty == True %}
 <table class="table table-striped">
             <thead>
             <tr>
@@ -41,16 +41,16 @@
             <tbody>
                 {% for record in records %}
                 <tr>
-                    <td>{{record['id']}}</td>
-                    <td>{{record['time']}}</td>
-                    <td>{{record['ip']}}</td>
-                    <td>{{record['location']}}</td>
-                    <td>{{record['api']}}</td>
-                    <td>{{record['cityname']}}</td>
-                    <td>{{record['weather']}}</td>
-                    <td><img src="../static/{{record['weathercode']}}.png" height="30" width="30"></td>
-                    <td>{{record['tempmin']}} {{record['tempunit']}}</td>
-                    <td>{{record['tempmax']}} {{record['tempunit']}}</td>
+                    <td>{{ record['id'] }}</td>
+                    <td>{{ record['time'] }}</td>
+                    <td>{{ record['ip'] }}</td>
+                    <td>{{ record['location'] }}</td>
+                    <td>{{ record['api'] }}</td>
+                    <td>{{ record['cityname'] }}</td>
+                    <td>{{ record['weather'] }}</td>
+                    <td><img src="../static/{{ record['weathercode'] }}.png" height="30" width="30"></td>
+                    <td>{{ record['tempmin'] }} {{ record['tempunit'] }}</td>
+                    <td>{{ record['tempmax'] }} {{ record['tempunit'] }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
