--- a/app/templates/history.html
+++ b/app/templates/history.html
@@ -22,7 +22,8 @@
         {{ message[1] }}
     </div>
 {% endfor %}
-{% if history_not_empty == True %}
+{% if history %}
+{{ history }}
 <table class="table table-striped">
             <thead>
             <tr>
